# pydiscogs

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.bak  top_level.txt
.github/workflows/: branches.yml
src/pydiscogs/: botbuilder.py  inspire.py  reddit.py  seekingalphanews.py  stocks.py  twitch.py  twitter.py  twitterscratch.py  wotd.py
src/pydiscogs/cogs/: ai.py  inspire.py  news.py  reddit.py  stocks.py  twitch.py  wotd.py
src/pydiscogs/cogs/ai/: agent.py  cog.py  memory.py
src/pydiscogs/cogs/ai/tools/: __init__.py  computer_control.py  memory_tool.py  playwright_computer.py  read_x_post.py  url_context.py  web_research.py  xai_research.py
src/pydiscogs/tests/: polygon_scratch.py  test_ai.py  test_ai_tools.py  test_botbuilder.py  test_inspire.py  test_reddit.py  test_seekingalphanews.py  test_stocks.py  test_twitch.py  test_wotd.py  test_xai_tool.py  testbot.yaml
src/pydiscogs/utils/: decorator_override.py  gemini.py  prompts.py  timing.py
tests/: test_inspire.py
