[project]
name = "pydiscogs"
version = "0.2.0"
description = "A collection of cogs that can be used to add functionality to a Discord.py bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpraw==7.8.1",
    "audioop-lts>=0.2.1",
    "duckduckgo-search==7.5.5",
    "google-genai==1.20.0",
    "langchain-community==0.3.20",
    "langchain-google-genai==2.0.10",
    "langchain-groq==0.2.3",
    "langchain-ollama==0.2.2",
    "langgraph==0.3.21",
    "ollama==0.5.1",
    "playwright==1.51.0",
    "polygon-api-client==1.14.6",
    "py-cord==2.6.1",
    "pyaml-env==1.2.1",
    "python-dotenv==1.0.1",
    "pytz>=2021.1",
    "tweepy[async]==4.12.1",
    "twitchio==3.1.0",
    "yfinance==0.2.63",
    "uvloop"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-pyproject = "*"
isort = "*"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E501", "W503"]
exclude = ["news.py", "prompts.py", "venv/*"]

[tool.poetry.scripts]
activate = "source .venv/bin/activate"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]

