[project]
name = "pydiscogs"
version = "0.5.2"
description = "A collection of cogs that can be used to add functionality to a Discord.py bot"
readme = "README.md"
requires-python = "==3.13.1"
dependencies = [
    "asyncpraw==7.8.1",
    "audioop-lts>=0.2.1",
    "duckduckgo-search==7.5.5",
    "google-genai==1.52.0",
    "langchain==1.2.0",
    "langchain-core==1.2.5",
    "langchain-google-genai==3.0.0",
    "langchain-groq==1.1.1",
    "langchain-ollama==1.0.0",
    "langgraph==1.0.5",
    "langgraph-checkpoint",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langsmith==0.4.39",
    "ollama==0.6.0",
    "polygon-api-client==1.16.3",
    "py-cord==2.6.1",
    "pyaml-env==1.2.1",
    "python-dotenv==1.2.1",
    "pytz>=2021.1",
    "greenlet>3.0.3",
    "google-adk==1.17.0",
    "xvfbwrapper==0.2.9",
    "playwright==1.56.0",
    "twitchio==3.1.0",
    "yfinance==0.2.63",
    "zstandard==0.25.0",
    "uvloop",
    "termcolor",
    "xdk>=0.2.7b0",
    "xai-sdk>=1.3.1",
    "groq>=0.37.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-pyproject = "*"
isort = "*"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E501", "W503"]
exclude = ["news.py", "prompts.py", "venv/*"]

[tool.poetry.scripts]
activate = "source .venv/bin/activate"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]


