[metadata]
name = pydiscogs
version = 0.0.2
author = Barret Miller
author_email = bpafoshizle@gmail.com
description = A collection of cogs that can be used to add functionality to a Discord.py bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bpafoshizle/pydiscogs
project_urls =
    Bug Tracker = https://github.com/bpafoshizle/pydiscogs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    "py_cord @ git+https://github.com/Pycord-Development/pycord#egg=py_cord"
    bs4==0.0.1
    pytz==2021.1
    twitchio>=2.0.2
    asyncpraw==7.2.0
    gfycat==0.2.2

python_requires = >=3.6

[options.packages.find]
where = src